--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,11 @@
 /.pnp
 .pnp.js
 .env
-
+.env.*
 # same as above for client
 client/node_modules
 client/.env
+client/.env.*
 
 # testing
 /coverage
