--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "concurrently": "^4.1.0",
+    "cross-env": "^5.2.0",
     "mocha": "^6.2.0",
     "nodemon": "^1.18.7"
   },
