--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-neighborhood",
+  "name": "book-search",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -8,7 +8,7 @@
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "install": "cd client && npm ci",
+    "install:client": "cd client && npm ci",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build",
     "test": "npm run test:server && npm run test:client",
@@ -21,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
