--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.6.7"
+    "mongoose": "^5.6.7",
+    "reactstrap": "^8.0.1"
   }
 }
