modified package.json for heroku deploy

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "install:client": "cd client && npm ci",
+    "install": "cd client && npm ci",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build",
     "test": "npm run test:server && npm run test:client",
@@ -17,6 +17,10 @@
     "test:client": "cd client && npm run test",
     "test:clientCI": "cd client && npx cross-env CI=0 npm run test",
     "lint": "eslint --quiet"
+  },
+  "engines": {
+    "npm": "6.9.0",
+    "node": "10.15.1"
   },
   "author": "",
   "license": "ISC",
