--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "npm": "6.9.0",
+    "node": "10.15.1"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
